--- a/src/server/FSharpTokens/FSharpTokens.fsproj
+++ b/src/server/FSharpTokens/FSharpTokens.fsproj
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>net5.0</TargetFramework>
-    <OutputType>Exe</OutputType>
-    <AzureFunctionsVersion>v3</AzureFunctionsVersion>
-    <AssemblyName>FSharpTokens.Server</AssemblyName>
-    <RootNamespace>FSharpTokens.Server</RootNamespace>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <GenerateRuntimeConfigurationFiles>true</GenerateRuntimeConfigurationFiles>
+    <AWSProjectType>Lambda</AWSProjectType>
+    <OutputType>exe</OutputType>
+    <!-- This property makes the build directory similar to a publish directory and helps the AWS .NET Lambda Mock Test Tool find project dependencies. -->
+    <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
   </PropertyGroup>
   <ItemGroup>
     <None Include="paket.references" />
@@ -18,11 +19,14 @@
     <Compile Include="../../../.deps/fantomas/src/Fantomas/TriviaTypes.fs" />
     <Compile Include="../../../.deps/fantomas/src/Fantomas/TokenParser.fs" />
     <Compile Include="../../shared/FSharpTokensShared.fs" />
+    <Compile Include="..\HttpConstants.fs" />
+    <Compile Include="..\AWSLambdaExtensions.fs" />
+    <Compile Include="..\SuaveExtensions.fs" />
     <Compile Include="Decoders.fs" />
     <Compile Include="Encoders.fs" />
     <Compile Include="GetTokens.fs" />
+    <Compile Include="Lambda.fs" />
     <Compile Include="Program.fs" />
-    <None Include="host.json" CopyToOutputDirectory="Always" />
   </ItemGroup>
   <Import Project="..\..\..\.paket\Paket.Restore.targets" />
 </Project>
