--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,4 +1,4 @@
-image: gitpod/workspace-dotnet
+image: gitpod/workspace-dotnet:latest
 vscode:
   extensions:
     - muhammad-sammy.csharp
@@ -7,8 +7,8 @@ vscode:
 tasks:
   - name: Download .NET SDKS
     init: |
-      curl -sSL https://dot.net/v1/dotnet-install.sh | bash /dev/stdin --version 3.1.402
-      curl -sSL https://dot.net/v1/dotnet-install.sh | bash /dev/stdin --version 5.0.401
+      curl -sSL https://dot.net/v1/dotnet-install.sh | bash /dev/stdin --version 3.1.402 --install-dir /home/gitpod/dotnet/
+      curl -sSL https://dot.net/v1/dotnet-install.sh | bash /dev/stdin --version 5.0.401 --install-dir /home/gitpod/dotnet/
   - command: rm paket-files/ -rf && dotnet tool restore && dotnet fake run build.fsx -t Install -p 2
 ports:
   - port: 9060
