--- a/.editorconfig
+++ b/.editorconfig
@@ -2,18 +2,34 @@
 fsharp_max_if_then_else_short_width=50
 fsharp_max_function_binding_width=50
 fsharp_align_function_signature_to_indentation=true
+fsharp_disable_elmish_syntax=true
 
 [build.fsx]
 fsharp_disable_elmish_syntax=true
 
-[src/**/Encoders.fs]
-fsharp_disable_elmish_syntax=true
-
-[src/client/fsharp/Navigation.fs]
-fsharp_disable_elmish_syntax=true
-
-[src/server/**/*.fs]
-fsharp_disable_elmish_syntax=true
-
-[src/server/**/Function.fs]
+[src/server/**/Program.fs]
 fsharp_max_infix_operator_expression=120
+
+[src/client/fsharp/App.fs]
+fsharp_disable_elmish_syntax=false
+
+[src/client/fsharp/SettingControls.fs]
+fsharp_disable_elmish_syntax=false
+
+[src/client/fsharp/Trivia/Menu.fs]
+fsharp_disable_elmish_syntax=false
+
+[src/client/fsharp/Trivia/ByTrivia.fs]
+fsharp_disable_elmish_syntax=false
+
+[src/client/fsharp/Trivia/ByTriviaNodeCandidates.fs]
+fsharp_disable_elmish_syntax=false
+
+[src/client/fsharp/Trivia/ByTriviaNodes.fs]
+fsharp_disable_elmish_syntax=false
+
+[src/client/fsharp/View.fs]
+fsharp_disable_elmish_syntax=false
+
+[src/client/fsharp/*/View.fs]
+fsharp_disable_elmish_syntax=false
