Remove additional SDK installs.

--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -6,9 +6,9 @@ vscode:
     - syler.sass-indented
 tasks:
   - name: Download .NET SDKS
-    init: |
-      curl -sSL https://dot.net/v1/dotnet-install.sh | bash /dev/stdin --version 3.1.402 --install-dir /home/gitpod/dotnet/
-      curl -sSL https://dot.net/v1/dotnet-install.sh | bash /dev/stdin --version 5.0.401 --install-dir /home/gitpod/dotnet/
+    # init: |
+    #   curl -sSL https://dot.net/v1/dotnet-install.sh | bash /dev/stdin --version 3.1.402 --install-dir /home/gitpod/dotnet/
+    #   curl -sSL https://dot.net/v1/dotnet-install.sh | bash /dev/stdin --version 5.0.401 --install-dir /home/gitpod/dotnet/
   - command: rm paket-files/ -rf && dotnet tool restore && dotnet fake run build.fsx -t Install -p 2
 ports:
   - port: 9060
