--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,7 +32,7 @@ jobs:
         dotnet-version: 6.0.200
 
     - name: copy files
-      run: cp -R /home/runner/.dotnet/packs/Microsoft.NETCore.App.Ref/6.0.2/ref/net6.0 /home/runner/.dotnet/packs/Microsoft.NETCore.App.Ref/6.0.0/ref/net6.0
+      run: cp -R /home/runner/.dotnet/packs/Microsoft.NETCore.App.Ref/6.0.2/ref/net6.0/ /home/runner/.dotnet/packs/Microsoft.NETCore.App.Ref/6.0.0/ref/net6.0/
 
     - name: Restore
       run: dotnet tool restore
