--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,8 +34,11 @@ jobs:
     - name: meh
       run: ls -la /home/runner/.dotnet/packs/Microsoft.NETCore.App.Ref
 
+    - name: mkdir 6.0.0
+      run: mkdir -p /home/runner/.dotnet/packs/Microsoft.NETCore.App.Ref/6.0.0/ref/net6.0
+
     - name: link files
-      run: ln -s /home/runner/.dotnet/packs/Microsoft.NETCore.App.Ref/6.0.2/ref/net6.0 /home/runner/.dotnet/packs/Microsoft.NETCore.App.Ref/6.0.0/ref/net6.0
+      run: cp -R /home/runner/.dotnet/packs/Microsoft.NETCore.App.Ref/6.0.2/ref/net6.0 /home/runner/.dotnet/packs/Microsoft.NETCore.App.Ref/6.0.0/ref/net6.0
 
     - name: Restore
       run: dotnet tool restore
