Update Trivia and Preview lambdas.

--- a/src/server/FantomasOnlinePreview/FantomasOnlinePreview.fsproj
+++ b/src/server/FantomasOnlinePreview/FantomasOnlinePreview.fsproj
@@ -22,7 +22,7 @@
     <Compile Include="Program.fs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\..\.deps\fantomas\src\Fantomas\Fantomas.fsproj" />
+    <ProjectReference Include="..\..\..\.deps\fantomas\src\Fantomas.Core\Fantomas.Core.fsproj" />
     <ProjectReference Include="..\..\..\.deps\fantomas\src\Fantomas.Extras\Fantomas.Extras.fsproj" />
   </ItemGroup>
   <Import Project="..\..\..\.paket\Paket.Restore.targets" />
