--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,9 +6,9 @@ name: CI
 # events but only for the master branch
 on:
   push:
-    branches: [ master ]
+    branches: [ main ]
   repository_dispatch:
-    types: fantomas-commit-on-master
+    types: fantomas-commit-on-main
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
