--- a/src/server/FantomasOnlinePreview/FantomasOnlinePreview.fsproj
+++ b/src/server/FantomasOnlinePreview/FantomasOnlinePreview.fsproj
@@ -7,6 +7,7 @@
     <OutputType>exe</OutputType>
     <!-- This property makes the build directory similar to a publish directory and helps the AWS .NET Lambda Mock Test Tool find project dependencies. -->
     <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
+    <ErrorOnDuplicatePublishOutputFiles>false</ErrorOnDuplicatePublishOutputFiles>
   </PropertyGroup>
   <ItemGroup>
     <None Include="paket.references" />
