--- a/src/server/FantomasOnlineV2/FantomasOnlineV2.fsproj
+++ b/src/server/FantomasOnlineV2/FantomasOnlineV2.fsproj
@@ -6,9 +6,9 @@
     <OutputType>exe</OutputType>
     <!-- This property makes the build directory similar to a publish directory and helps the AWS .NET Lambda Mock Test Tool find project dependencies. -->
     <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
+    <IsLambda>true</IsLambda>
   </PropertyGroup>
   <ItemGroup>
-    <None Include="paket.references" />
     <Compile Include="../../shared/FantomasOnlineShared.fs" />
     <Compile Include="..\HttpConstants.fs" />
     <Compile Include="..\AWSLambdaExtensions.fs" />
@@ -20,5 +20,10 @@
     <Compile Include="Lambda.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
-  <Import Project="..\..\..\.paket\Paket.Restore.targets" />
+  <ItemGroup>
+    <PackageReference Include="fantomas" Version="2.9.2" />
+    <PackageReference Include="FSharp.Compiler.Service" Version="25.0.1" />
+    <PackageReference Include="FSharp.Core" Version="4.1.18" />
+    <PackageReference Include="Thoth.Json.Net" Version="5.0.0" />
+  </ItemGroup>
 </Project>
