--- a/src/server/FantomasOnlineV4/FantomasOnlineV4.fsproj
+++ b/src/server/FantomasOnlineV4/FantomasOnlineV4.fsproj
@@ -7,9 +7,9 @@
     <OutputType>exe</OutputType>
     <!-- This property makes the build directory similar to a publish directory and helps the AWS .NET Lambda Mock Test Tool find project dependencies. -->
     <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
+    <IsLambda>true</IsLambda>
   </PropertyGroup>
   <ItemGroup>
-    <None Include="paket.references" />
     <Compile Include="../../shared/FantomasOnlineShared.fs" />
     <Compile Include="..\HttpConstants.fs" />
     <Compile Include="..\AWSLambdaExtensions.fs" />
@@ -21,5 +21,12 @@
     <Compile Include="Lambda.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
-  <Import Project="..\..\..\.paket\Paket.Restore.targets" />
+  <ItemGroup>
+    <PackageReference Include="Fantomas" Version="4.7.9" />
+    <PackageReference Include="Fantomas.Extras" Version="4.7.9" />
+    <PackageReference Include="FSharp.Compiler.Service" Version="41.0.3" />
+    <PackageReference Include="FSharp.Core" Version="6.0.3" />
+    <PackageReference Include="Microsoft.Build.Utilities.Core" Version="17.0.0" />
+    <PackageReference Include="Thoth.Json.Net" Version="5.0.0" />
+  </ItemGroup>
 </Project>
