--- a/src/server/TriviaViewer/TriviaViewer.fsproj
+++ b/src/server/TriviaViewer/TriviaViewer.fsproj
@@ -8,9 +8,9 @@
     <!-- This property makes the build directory similar to a publish directory and helps the AWS .NET Lambda Mock Test Tool find project dependencies. -->
     <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
     <ErrorOnDuplicatePublishOutputFiles>false</ErrorOnDuplicatePublishOutputFiles>
+    <IsLambda>true</IsLambda>
   </PropertyGroup>
   <ItemGroup>
-    <None Include="paket.references" />
     <Compile Include="../../../.deps/fantomas/src/Fantomas.Core/ISourceTextExtensions.fs" />
     <Compile Include="../../../.deps/fantomas/src/Fantomas.Core/RangeHelpers.fs" />
     <Compile Include="../../../.deps/fantomas/src/Fantomas.Core/AstExtensions.fs" />
@@ -36,5 +36,8 @@
   <ItemGroup>
     <ProjectReference Include="..\..\..\.deps\fantomas\src\Fantomas.FCS\Fantomas.FCS.fsproj" />
   </ItemGroup>
-  <Import Project="..\..\..\.paket\Paket.Restore.targets" />
+  <ItemGroup>
+    <PackageReference Include="FSharp.Core" Version="6.0.6" />
+    <PackageReference Include="Thoth.Json.Net" Version="8.0.0" />
+  </ItemGroup>
 </Project>
