--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -21,3 +21,11 @@ updates:
   - dependency-name: "@snowpack/plugin-dotenv"
     versions:
     - 2.1.0
+— package-ecosystem: nuget
+  directory: "/src/server/ASTViewer"
+  schedule:
+    interval: daily
+    time: "10:00"
+  open-pull-requests-limit: 10
+  allow:
+    - dependency-name: "Fantomas.FCS"
