--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -22,8 +22,12 @@ jobs:
         with:
           node-version: '16'
 
-      - name: Setup .NET Core 6.0
+      - name: Setup dotnet
         uses: actions/setup-dotnet@v2
+        with:
+          dotnet-version: |
+            7.0.100
+            6.0.x
 
       - name: Clone Fantomas
         run: dotnet fsi build.fsx -p Fantomas-Git
