--- a/src/client/fsharp/FantomasTools.fsproj
+++ b/src/client/fsharp/FantomasTools.fsproj
@@ -5,6 +5,7 @@
     <RootNamespace>FantomasTools.Client</RootNamespace>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="../../shared/OakShared.fs" />
     <Compile Include="../../shared/TriviaShared.fs" />
     <Compile Include="../../shared/ASTViewerShared.fs" />
     <Compile Include="../../shared/FantomasOnlineShared.fs" />
@@ -15,6 +16,12 @@
     <Compile Include="SettingControls.fs" />
     <Compile Include="Http.fs" />
 
+    <Compile Include="Oak\Model.fs" />
+    <Compile Include="Oak\Encoders.fs" />
+    <Compile Include="Oak\Decoders.fs" />
+    <Compile Include="Oak\State.fs" />
+    <Compile Include="Oak\View.fs" />
+    
     <Compile Include="Trivia\Model.fs" />
     <Compile Include="Trivia\Encoders.fs" />
     <Compile Include="Trivia\Decoders.fs" />
