--- a/src/server/FantomasOnlineMain/FantomasOnlineMain.fsproj
+++ b/src/server/FantomasOnlineMain/FantomasOnlineMain.fsproj
@@ -9,6 +9,7 @@
     <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
     <ErrorOnDuplicatePublishOutputFiles>false</ErrorOnDuplicatePublishOutputFiles>
     <IsLambda>true</IsLambda>
+    <RootNamespace>FantomasOnlineMain</RootNamespace>
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="../../shared/FantomasOnlineShared.fs" />
