--- a/src/server/OakViewer/OakViewer.fsproj
+++ b/src/server/OakViewer/OakViewer.fsproj
@@ -9,22 +9,28 @@
     <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
     <ErrorOnDuplicatePublishOutputFiles>false</ErrorOnDuplicatePublishOutputFiles>
     <IsLambda>true</IsLambda>
-    <RootNamespace>FantomasOnlinePreview</RootNamespace>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="../../shared/FantomasOnlineShared.fs" />
+    <Compile Include="../../../.deps/dallas/src/Fantomas.Core/ISourceTextExtensions.fs" />
+    <Compile Include="../../../.deps/dallas/src/Fantomas.Core/RangeHelpers.fs" />
+    <Compile Include="../../../.deps/dallas/src/Fantomas.Core/Utils.fs" />
+    <Compile Include="../../../.deps/dallas/src/Fantomas.Core/FormatConfig.fs" />
+    <Compile Include="../../../.deps/dallas/src/Fantomas.Core/SyntaxOak.fs" />
+    <Compile Include="../../../.deps/dallas/src/Fantomas.Core/Fangorn.fsi" />
+    <Compile Include="../../../.deps/dallas/src/Fantomas.Core/Fangorn.fs" />
+    <Compile Include="../../../.deps/dallas/src/Fantomas.Core/Flowering.fsi" />
+    <Compile Include="../../../.deps/dallas/src/Fantomas.Core/Flowering.fs" />
+    <Compile Include="../../shared/OakShared.fs" />
     <Compile Include="..\HttpConstants.fs" />
     <Compile Include="..\AWSLambdaExtensions.fs" />
     <Compile Include="..\SuaveExtensions.fs" />
-    <Compile Include="../FantomasOnline.Shared/Encoders.fs" />
-    <Compile Include="../FantomasOnline.Shared/Decoders.fs" />
-    <Compile Include="../FantomasOnline.Shared/Http.fs" />
-    <Compile Include="FormatCode.fs" />
+    <Compile Include="Decoders.fs" />
+    <Compile Include="GetOak.fs" />
     <Compile Include="Lambda.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\..\.deps\dallas\src\Fantomas.Core\Fantomas.Core.fsproj" />
+    <ProjectReference Include="..\..\..\.deps\dallas\src\Fantomas.FCS\Fantomas.FCS.fsproj" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="FSharp.Core" Version="6.0.6" />
