--- a/src/server/FantomasOnlinePreview/FantomasOnlinePreview.fsproj
+++ b/src/server/FantomasOnlinePreview/FantomasOnlinePreview.fsproj
@@ -24,7 +24,7 @@
     <Compile Include="Program.fs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\..\.deps\dallas\src\Fantomas.Core\Fantomas.Core.fsproj" />
+    <ProjectReference Include="..\..\..\.deps\fantomas\src\Fantomas.Core\Fantomas.Core.fsproj" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="FSharp.Core" Version="6.0.6" />
