--- a/src/client/package.json
+++ b/src/client/package.json
@@ -5,22 +5,23 @@
     "build": "vite build --base=/fantomas-tools/",
     "serve": "vite preview",
     "format": "prettier --write \"src/**/*.{js,jsx}\"",
-    "lint": "prettier --check \"src/**/*.{js,jsx}\""    
+    "lint": "prettier --check \"src/**/*.{js,jsx}\""
   },
   "dependencies": {
+    "@monaco-editor/react": "4.1.1",
+    "bootstrap": "4.6.0",
+    "lz-string": "1.4.4",
+    "monaco-editor": "0.21.3",
+    "notyf": "3.10.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "reactstrap": "8.10.1",
-    "bootstrap": "4.6.0",
-    "lz-string": "1.4.4",
-    "notyf": "3.10.0",
-    "@monaco-editor/react": "4.1.1",
-    "monaco-editor": "0.21.3"
+    "vis-react": "^0.5.1"
   },
   "devDependencies": {
     "@vitejs/plugin-react-refresh": "^1.3.6",
-    "vite": "^3.2.5",
+    "prettier": "2.6.0",
     "sass": "1.56.1",
-    "prettier": "2.6.0"
+    "vite": "^3.2.5"
   }
 }
