memoize utils moved to separate file

--- a/src/client/fsharp/FantomasTools.fsproj
+++ b/src/client/fsharp/FantomasTools.fsproj
@@ -14,6 +14,7 @@
     <Compile Include="UrlTools.fs" />
     <Compile Include="SettingControls.fs" />
     <Compile Include="Http.fs" />
+    <Compile Include="Utils.fs" />
 
     <Compile Include="Oak\Model.fs" />
     <Compile Include="Oak\Encoders.fs" />
