--- a/src/client/fsharp/FantomasTools.fsproj
+++ b/src/client/fsharp/FantomasTools.fsproj
@@ -21,6 +21,7 @@
     <Compile Include="Oak\Decoders.fs" />
     <Compile Include="Oak\State.fs" />
     <Compile Include="Oak\Graph.fs" />
+    <Compile Include="Oak\GraphView.fs" />
     <Compile Include="Oak\View.fs" />
 
     <Compile Include="FantomasOnline\Model.fs" />
