Oak Graph view (#478)
* Add Graph Oak view

* fix stack overflow in GetOak

* Graph options in settings.
Option to limit max number of nodes.
Navigate to sub-tree with click.

* revert to GraphView not default

* remove debug log

* more compact layout

* format

* auto set graph width and height

* back button move to top

* slightly increase default nodelimit

* memoize utils moved to separate file

* add graph nodes scaling

* add graph nodes scaling

* remove use of <|

* return to root view, after GetOak

* naming, change colors

* format

* fix tree parsing

* Send json from Oak lambda.

* Revert "fix tree parsing"

This reverts commit e7a59e2243adec99c1c25559916b97d1c43f8df9.

* fix tree parsing

* updated to parse tree returned from server

* remove debug logging

* cage mutable inside function

* Add range as object to response, make Oak optional, rename childs to children.

* Refactor result view to be separate from the graph view.

* move GraphView to separate file.

* Pass level to vis node.

* Trivia links as dashed edges

* fix comment node detection

* Change Newline background color

Co-authored-by: nojaf <florian.verdonck@outlook.com>

--- a/src/client/fsharp/FantomasTools.fsproj
+++ b/src/client/fsharp/FantomasTools.fsproj
@@ -14,11 +14,14 @@
     <Compile Include="UrlTools.fs" />
     <Compile Include="SettingControls.fs" />
     <Compile Include="Http.fs" />
+    <Compile Include="Utils.fs" />
 
     <Compile Include="Oak\Model.fs" />
     <Compile Include="Oak\Encoders.fs" />
     <Compile Include="Oak\Decoders.fs" />
     <Compile Include="Oak\State.fs" />
+    <Compile Include="Oak\Graph.fs" />
+    <Compile Include="Oak\GraphView.fs" />
     <Compile Include="Oak\View.fs" />
 
     <Compile Include="FantomasOnline\Model.fs" />
