--- a/src/server/OakViewer/OakViewer.fsproj
+++ b/src/server/OakViewer/OakViewer.fsproj
@@ -12,15 +12,15 @@
     <Tailcalls>true</Tailcalls>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="../../../.deps/fantomas/src/Fantomas.Core/ISourceTextExtensions.fs" />
-    <Compile Include="../../../.deps/fantomas/src/Fantomas.Core/RangeHelpers.fs" />
-    <Compile Include="../../../.deps/fantomas/src/Fantomas.Core/Utils.fs" />
-    <Compile Include="../../../.deps/fantomas/src/Fantomas.Core/FormatConfig.fs" />
-    <Compile Include="../../../.deps/fantomas/src/Fantomas.Core/SyntaxOak.fs" />
-    <Compile Include="../../../.deps/fantomas/src/Fantomas.Core/ASTTransformer.fsi" />
-    <Compile Include="../../../.deps/fantomas/src/Fantomas.Core/ASTTransformer.fs" />
-    <Compile Include="../../../.deps/fantomas/src/Fantomas.Core/Trivia.fsi" />
-    <Compile Include="../../../.deps/fantomas/src/Fantomas.Core/Trivia.fs" />
+    <Compile Include="$(FantomasRepository)\src/Fantomas.Core/ISourceTextExtensions.fs" />
+    <Compile Include="$(FantomasRepository)\src/Fantomas.Core/RangeHelpers.fs" />
+    <Compile Include="$(FantomasRepository)\src/Fantomas.Core/Utils.fs" />
+    <Compile Include="$(FantomasRepository)\src/Fantomas.Core/FormatConfig.fs" />
+    <Compile Include="$(FantomasRepository)\src/Fantomas.Core/SyntaxOak.fs" />
+    <Compile Include="$(FantomasRepository)\src/Fantomas.Core/ASTTransformer.fsi" />
+    <Compile Include="$(FantomasRepository)\src/Fantomas.Core/ASTTransformer.fs" />
+    <Compile Include="$(FantomasRepository)\src/Fantomas.Core/Trivia.fsi" />
+    <Compile Include="$(FantomasRepository)\src/Fantomas.Core/Trivia.fs" />
     <Compile Include="../../shared/OakShared.fs" />
     <Compile Include="..\HttpConstants.fs" />
     <Compile Include="..\AWSLambdaExtensions.fs" />
@@ -32,7 +32,7 @@
     <Compile Include="Program.fs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\..\.deps\fantomas\src\Fantomas.FCS\Fantomas.FCS.fsproj" />
+    <ProjectReference Include="$(FantomasRepository)\src\Fantomas.FCS\Fantomas.FCS.fsproj" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="FSharp.Core" Version="6.0.6" />
