Update for v5.2 stable!

--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -7,8 +7,9 @@
         <RestorePackagesWithLockFile>true</RestorePackagesWithLockFile>
         <!-- https://www.gresearch.co.uk/blog/article/improve-nuget-restores-with-static-graph-evaluation/ -->
         <RestoreUseStaticGraphEvaluation>true</RestoreUseStaticGraphEvaluation>
-        <!-- Override this value to point to your local fantomas repository -->
-        <FantomasRepository>$(MSBuildThisFileDirectory).deps\fantomas</FantomasRepository>
+        <!-- Override these values to point to your local fantomas repository -->
+        <FantomasMainRepository>$(MSBuildThisFileDirectory).deps\fantomas</FantomasMainRepository>
+        <FantomasPreviewRepository>$(MSBuildThisFileDirectory).deps\v6.0</FantomasPreviewRepository>
     </PropertyGroup>
 
     <ItemGroup Condition="'$(IsLambda)' == 'true'">
