Update ASTViewer, update V5 and update fantomas tool.

--- a/.editorconfig
+++ b/.editorconfig
@@ -1,30 +1,24 @@
 [src/**/*.fs]
-fsharp_max_if_then_else_short_width=50
-fsharp_max_function_binding_width=50
-fsharp_align_function_signature_to_indentation=true
-fsharp_keep_max_number_of_blank_lines=1
+fsharp_max_if_then_else_short_width = 50
+fsharp_max_function_binding_width = 50
+fsharp_align_function_signature_to_indentation = true
+fsharp_keep_max_number_of_blank_lines = 1
 
 [build.fsx]
-fsharp_keep_max_number_of_blank_lines=1
+fsharp_keep_max_number_of_blank_lines = 1
 fsharp_blank_lines_around_nested_multiline_expressions=false
 
 [src/server/**/Program.fs]
-fsharp_max_infix_operator_expression=120
+fsharp_max_infix_operator_expression = 120
 
 [src/client/fsharp/App.fs]
-fsharp_multiline_bracket_style = stroustrup
+fsharp_experimental_elmish = true
 
 [src/client/fsharp/SettingControls.fs]
-fsharp_multiline_bracket_style = stroustrup
-
-[src/client/fsharp/Trivia/Menu.fs]
-fsharp_multiline_bracket_style = stroustrup
-
-[src/client/fsharp/Trivia/Tabs/*.fs]
-fsharp_multiline_bracket_style = stroustrup
+fsharp_experimental_elmish = true
 
 [src/client/fsharp/View.fs]
-fsharp_multiline_bracket_style = stroustrup
+fsharp_experimental_elmish = true
 
 [src/client/fsharp/*/View.fs]
-fsharp_multiline_bracket_style = stroustrup
+fsharp_experimental_elmish = true
