--- a/src/client/fsharp/FantomasTools.fsproj
+++ b/src/client/fsharp/FantomasTools.fsproj
@@ -9,10 +9,11 @@
     <Compile Include="../../shared/ASTViewerShared.fs" />
     <Compile Include="../../shared/FantomasOnlineShared.fs" />
     <Compile Include="Editor.fs" />
+    <Compile Include="Style.fs" />
     <Compile Include="VersionBar.fs" />
     <Compile Include="Loader.fs" />
-    <Compile Include="UrlTools.fs" />
     <Compile Include="SettingControls.fs" />
+    <Compile Include="UrlTools.fs" />
     <Compile Include="Http.fs" />
     <Compile Include="Utils.fs" />
 
@@ -41,18 +42,18 @@
     <Compile Include="State.fs" />
     <Compile Include="View.fs" />
     <Compile Include="App.fs" />
-    
+
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="FSharp.Core" Version="6.0.6" />
     <PackageReference Include="Fable.Browser.Url" Version="1.1.0" />
     <PackageReference Include="Fable.Core" Version="3.7.1" />
     <PackageReference Include="Fable.Fetch" Version="2.6.0" />
-    <PackageReference Include="Fable.Reactstrap" Version="0.5.1" />
     <PackageReference Include="Feliz" Version="1.68.0" />
     <PackageReference Include="Feliz.CompilerPlugins" Version="1.10.0" />
     <PackageReference Include="Feliz.Router" Version="3.8.0" />
     <PackageReference Include="Feliz.UseElmish" Version="1.6.0" />
     <PackageReference Include="Thoth.Json" Version="7.0.0" />
+    <PackageReference Include="Zanaptak.TypedCssClasses" Version="1.0.0" />
   </ItemGroup>
 </Project>
