--- a/src/client/package.json
+++ b/src/client/package.json
@@ -5,17 +5,17 @@
     "build": "vite build --base=/fantomas-tools/",
     "serve": "vite preview",
     "format": "prettier --write \"src/**/*.{js,jsx}\"",
-    "lint": "prettier --check \"src/**/*.{js,jsx}\""
+    "lint": "prettier --check \"src/**/*.{js,jsx}\"",
+    "sass": "sass src/styles/style.sass"
   },
   "dependencies": {
     "@monaco-editor/react": "4.4.6",
-    "bootstrap": "4.6.2",
+    "bootstrap": "5.2.3",
     "lz-string": "1.4.4",
     "monaco-editor": "0.36.1",
     "notyf": "3.10.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "reactstrap": "8.10.1",
     "vis-react": "^0.5.1"
   },
   "devDependencies": {
