--- a/src/client/fsharp/FantomasTools.fsproj
+++ b/src/client/fsharp/FantomasTools.fsproj
@@ -45,14 +45,17 @@
 
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Fable.React" Version="9.2.0" />
+    <PackageReference Include="Fable.ReactDom.Types" Version="18.2.0" />
+    <PackageReference Include="Feliz.Listeners" Version="1.1.0" />
     <PackageReference Include="FSharp.Core" Version="6.0.6" />
     <PackageReference Include="Fable.Browser.Url" Version="1.1.0" />
-    <PackageReference Include="Fable.Core" Version="3.7.1" />
+    <PackageReference Include="Fable.Core" Version="4.0.0" />
     <PackageReference Include="Fable.Fetch" Version="2.6.0" />
-    <PackageReference Include="Feliz" Version="1.68.0" />
-    <PackageReference Include="Feliz.CompilerPlugins" Version="1.10.0" />
-    <PackageReference Include="Feliz.Router" Version="3.8.0" />
-    <PackageReference Include="Feliz.UseElmish" Version="1.6.0" />
+    <PackageReference Include="Feliz" Version="2.5.0" />
+    <PackageReference Include="Feliz.CompilerPlugins" Version="2.1.0" />
+    <PackageReference Include="Feliz.Router" Version="4.0.0" />
+    <PackageReference Include="Feliz.UseElmish" Version="2.4.0" />
     <PackageReference Include="Thoth.Json" Version="7.0.0" />
     <PackageReference Include="Zanaptak.TypedCssClasses" Version="1.0.0" />
   </ItemGroup>
