--- a/src/client/package.json
+++ b/src/client/package.json
@@ -14,8 +14,9 @@
     "lz-string": "1.4.4",
     "monaco-editor": "0.36.1",
     "notyf": "3.10.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "use-sync-external-store": "^1.2.0",
     "vis-react": "^0.5.1"
   },
   "devDependencies": {
