Update to fable 4 (#526)
* - Update to fable 4
- remove src/client/global.json

* sort packages for easier reading

* Remove Feliz.Listeners.

* Use slightly newer versions.

* Remove old monaco-editor.

* DisableImplicitNuGetFallbackFolder

* NoWarn NU1603

* Bump FSharp.Core to latest?

* Use actions/setup-dotnet@v3

---------

Co-authored-by: nojaf <florian.verdonck@outlook.com>

--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -7,6 +7,8 @@
         <RestorePackagesWithLockFile>true</RestorePackagesWithLockFile>
         <!-- https://www.gresearch.co.uk/blog/article/improve-nuget-restores-with-static-graph-evaluation/ -->
         <RestoreUseStaticGraphEvaluation>true</RestoreUseStaticGraphEvaluation>
+        <NoWarn>NU1603</NoWarn>
+        <DisableImplicitNuGetFallbackFolder>true</DisableImplicitNuGetFallbackFolder>
         <!-- Override these values to point to your local fantomas repository -->
         <FantomasMainRepository>$(MSBuildThisFileDirectory).deps\fantomas</FantomasMainRepository>
         <FantomasPreviewRepository>$(MSBuildThisFileDirectory).deps\v6.0</FantomasPreviewRepository>
