--- a/src/client/fsharp/FantomasTools.fsproj
+++ b/src/client/fsharp/FantomasTools.fsproj
@@ -1,6 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
+    <TargetFramework>net7.0</TargetFramework>
     <AssemblyName>FantomasTools.Client</AssemblyName>
     <RootNamespace>FantomasTools.Client</RootNamespace>
   </PropertyGroup>
@@ -45,14 +45,16 @@
 
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="FSharp.Core" Version="6.0.6" />
-    <PackageReference Include="Fable.Browser.Url" Version="1.1.0" />
-    <PackageReference Include="Fable.Core" Version="3.7.1" />
+    <PackageReference Include="FSharp.Core" Version="7.0.200" />
+    <PackageReference Include="Fable.Browser.Url" Version="1.3.2" />
+    <PackageReference Include="Fable.Core" Version="4.0.0" />
     <PackageReference Include="Fable.Fetch" Version="2.6.0" />
-    <PackageReference Include="Feliz" Version="1.68.0" />
-    <PackageReference Include="Feliz.CompilerPlugins" Version="1.10.0" />
-    <PackageReference Include="Feliz.Router" Version="3.8.0" />
-    <PackageReference Include="Feliz.UseElmish" Version="1.6.0" />
+    <PackageReference Include="Fable.React" Version="9.2.0" />
+    <PackageReference Include="Fable.ReactDom.Types" Version="18.2.0" />
+    <PackageReference Include="Feliz" Version="2.6.0" />
+    <PackageReference Include="Feliz.CompilerPlugins" Version="2.2.0" />
+    <PackageReference Include="Feliz.Router" Version="4.0.0" />
+    <PackageReference Include="Feliz.UseElmish" Version="2.4.0" />
     <PackageReference Include="Thoth.Json" Version="7.0.0" />
     <PackageReference Include="Zanaptak.TypedCssClasses" Version="1.0.0" />
   </ItemGroup>
