Comment out FantomasPreviewRepository for now.

--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -11,7 +11,7 @@
         <DisableImplicitNuGetFallbackFolder>true</DisableImplicitNuGetFallbackFolder>
         <!-- Override these values to point to your local fantomas repository -->
         <FantomasMainRepository>$(MSBuildThisFileDirectory).deps\fantomas</FantomasMainRepository>
-        <FantomasPreviewRepository>$(MSBuildThisFileDirectory).deps\v6.0</FantomasPreviewRepository>
+<!--        <FantomasPreviewRepository>$(MSBuildThisFileDirectory).deps\v6.0</FantomasPreviewRepository>-->
     </PropertyGroup>
 
     <ItemGroup Condition="'$(IsLambda)' == 'true'">
