--- a/src/client/package.json
+++ b/src/client/package.json
@@ -21,6 +21,7 @@
   "devDependencies": {
     "@vitejs/plugin-react-refresh": "^1.3.6",
     "prettier": "2.8.6",
+    "prop-types": "^15.8.1",
     "sass": "1.59.3",
     "vite": "^4.2.1"
   }
