--- a/src/client/package.json
+++ b/src/client/package.json
@@ -16,7 +16,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "use-sync-external-store": "^1.2.0",
-    "vis-react": "^0.5.1"
+    "vis-data": "7.1.6",
+    "vis-network": "9.1.6"
   },
   "devDependencies": {
     "@vitejs/plugin-react-refresh": "^1.3.6",
